# agent-verse

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RUNBOOK.md
agent-verse-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent-verse-plan.md  alembic.ini  coverage.json  coverage_baseline2.json  coverage_final.json  coverage_final2.json  coverage_final3.json  coverage_final4.json  coverage_final5.json  coverage_final6.json  coverage_final7.json  coverage_final_clean.json  coverage_final_definitive.json  coverage_full_final.json  coverage_full_final2.json  coverage_new.json  coverage_no_new_tests.json  coverage_true_baseline.json  openapi.json  pyproject.toml
agent-verse-backend/.github/workflows/: ci.yml  deploy.yml
agent-verse-backend/app/: main.py
agent-verse-backend/app/agent/: __init__.py  debate.py  errors.py  goal_tree.py  graph.py  loop.py  model_router.py  persistence.py  prompts.py  router.py  sanitization.py  state.py  structured_plan.py  supervisor.py  tool_calls.py  tool_context.py  tool_risk.py  workflow_executor.py  workflow_planner.py
agent-verse-backend/app/analytics/: __init__.py  aggregator.py
agent-verse-backend/app/api/: a2a.py  agents.py  analytics.py  artifacts.py  auth.py  civilization.py  collab.py  connectors.py  costs.py  enterprise.py  goals.py  governance.py  guardrails.py  insights.py  integrations.py  knowledge.py  memory.py  perception.py  replay.py  rpa.py  schedules.py  system.py  templates.py  tenants.py  tools.py  training_export.py  workflows.py
agent-verse-backend/app/auth/: __init__.py  agent_identity.py  cache_warmer.py  ip_allowlist.py  keycloak.py  permission_cache.py  saml_provider.py  scim_handler.py  scope_enforcement.py  scope_seeder.py
agent-verse-backend/app/civilization/: __init__.py  a2a_dispatch.py  blackboard.py  bus.py  constitution.py  events.py  governor.py  learning.py  metrics.py  models.py  orchestrator.py  society.py  spawn_tool.py
agent-verse-backend/app/cli/: __init__.py  main.py
agent-verse-backend/app/collab/: agent_collab.py  store.py
agent-verse-backend/app/core/: config.py  errors.py  pools.py  secrets.py
agent-verse-backend/app/db/: rls.py  session.py
agent-verse-backend/app/enterprise/: compliance.py  compliance_v2.py  marketplace.py  marketplace_v2.py  red_team.py  simulation.py
agent-verse-backend/app/governance/: audit.py  audit_v2.py  cost.py  hitl.py  legal_holds.py  permissions.py  policies.py  pricing.py  siem_adapters.py
agent-verse-backend/app/intelligence/: benchmarking.py  cost_optimizer.py  cost_tracker.py  eval.py  eval_runner.py  eval_suite.py  explainability.py  guardrail_engine.py  guardrail_patterns.py  guardrails.py  meta_agent.py  prompt_optimizer.py  self_optimization.py  self_optimizer_v2.py
agent-verse-backend/app/knowledge/: __init__.py  chunker_v2.py  federated_search.py
agent-verse-backend/app/mcp/: __init__.py  a2a.py  capability_search.py  catalog.py  certification.py  certification_manifest.py  client.py  oauth.py  openapi_importer.py  registry.py  ws_client.py
agent-verse-backend/app/memory/: execution.py  long_term.py  tool_reliability.py
agent-verse-backend/app/observability/: health.py  logging.py  metrics.py  tracing.py
agent-verse-backend/app/perception/: __init__.py  browser_agent.py  multimodal.py  page_analyzer.py
agent-verse-backend/app/pipeline/: steps.py
agent-verse-backend/app/providers/: __init__.py  anthropic_provider.py  base.py  fake.py  gemini_provider.py  openai_compatible.py  vault.py  voyage_provider.py
agent-verse-backend/app/rag/: chunker.py  evaluation.py  models.py  semantic_cache.py  store.py
agent-verse-backend/app/reliability/: bulkhead.py  circuit_breaker.py  dedup.py  distributed_lock.py  goal_lifecycle.py  idempotency.py  redis_circuit_breaker.py  result_processor.py  rollback.py  tool_inverses.py
agent-verse-backend/app/rpa/: __init__.py  artifacts.py  credential_injector.py  executor.py  runner.py  session.py  session_manager.py  tools.py
agent-verse-backend/app/scaling/: __init__.py  celery_app.py  parallel_executor.py  priority_queue.py  tasks.py
agent-verse-backend/app/sdk/: __init__.py  manifest.py  mock_server.py
agent-verse-backend/app/services/: event_store.py  goal_queue.py  goal_service.py  llm_config_store.py  notification_service.py  persistence.py  result_artifacts.py  tenant_service.py  webhook_service.py
agent-verse-backend/app/tenancy/: __init__.py  context.py  domain_role_templates.py  limits.py  middleware.py  rate_limiter.py  rbac.py  store.py
agent-verse-backend/app/testing/: __init__.py  harness.py
agent-verse-backend/app/tools/: __init__.py  artifact_tool.py  code_interpreter.py  document_parser.py  email_tool.py  file_ops.py  http_tool.py  shell_tool.py  web_search.py
agent-verse-backend/app/triggers/: models.py  nl_scheduler.py  store.py
agent-verse-backend/helm/agentverse/: Chart.yaml  values.yaml
agent-verse-backend/infra/: docker-compose.prod.yml  docker-compose.yml  nginx.conf
agent-verse-backend/infra/k8s/: backend-deployment-blue.yaml  backend-deployment-green.yaml  backend-deployment.yaml  backend-hpa.yaml  backend-pdb.yaml  backend-service.yaml  beat-deployment.yaml  cluster-issuer.yaml  configmap.yaml  external-secret.yaml  frontend-deployment.yaml  ingress.yaml  keda-scaledobject.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  networkpolicy.yaml  pg-backup-cronjob.yaml  pgbouncer-deployment.yaml  postgres-pvc.yaml  secrets.yaml  switch-traffic.sh  worker-deployment.yaml  worker-hpa.yaml  worker-pdb.yaml
agent-verse-backend/scripts/: export_openapi.py
agent-verse-backend/tests/: conftest.py  test_mock_fixes.py  test_p3_phases.py  test_phase3_rbac.py  test_phase4_connectors.py  test_production_safety.py
agent-verse-sdk-python/: README.md  pyproject.toml
agent-verse-sdk-python/agentverse/: __init__.py  cli.py  client.py  exceptions.py  mock_server.py  models.py  streaming.py
agent-verse-sdk-python/tests/: conftest.py  test_client.py  test_client_parity.py  test_streaming.py
(+1422 files in other folders)
