[project]
name = "agent-verse-backend"
version = "0.1.0"
description = "AgentVerse — vendor-agnostic, multi-tenant operating system for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Pine Labs" }]

dependencies = [
    # web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    # database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # cache / broker / state
    "redis>=5.2.0",
    # http clients (MCP / A2A / providers)
    "httpx>=0.28.0",
    # crypto (credential vault)
    "cryptography>=44.0.0",
    # observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "prometheus-client>=0.21.0",
    "anthropic>=0.50.0",
    "langgraph>=0.2.0",
]

[project.scripts]
agentverse = "app.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis]>=4.9.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx2>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
markers = [
    "integration: tests requiring real Redis/Postgres (testcontainers)",
    "slow: tests that hit real LLM providers (opt-in)",
]
filterwarnings = [
    "error",
    # Third-party deprecation inside testcontainers' wait helpers (out of our control).
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["A003", "B008"]  # B008: Depends() in defaults is normal FastAPI pattern

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pgvector.*", "openai.*"]
ignore_missing_imports = true
