[project]
name = "agent-verse-backend"
version = "0.1.0"
description = "AgentVerse — vendor-agnostic, multi-tenant operating system for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Pine Labs" }]

dependencies = [
    # web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    # database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # cache / broker / state
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.3.0",
    # CLI
    "typer>=0.12.0",
    # http clients (MCP / A2A / providers)
    "httpx>=0.28.0",
    # crypto (credential vault)
    "cryptography>=44.0.0",
    # SSO (Keycloak JWT validation)
    "python-jose[cryptography]>=3.3.0",
    # observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "prometheus-client>=0.21.0",
    "anthropic>=0.50.0",
    "langgraph>=0.2.0",
    # scheduling
    "croniter>=1.4.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0",
    # email-to-goal IMAP listener
    "aioimaplib>=1.1",
    # async SMTP for notification service
    "aiosmtplib>=3.0",
    # LangGraph Redis checkpointer for persistent agent state across replicas
    "langgraph-checkpoint-redis>=0.0.1",
    "boto3>=1.40.61",
]

[project.scripts]
agentverse = "app.cli.main:app"

[project.optional-dependencies]
# LLM providers (install as needed)
voyage = ["voyageai>=0.2.0"]
gemini = ["google-generativeai>=0.8.0"]
local-embed = ["sentence-transformers>=3.0.0"]
browser = ["playwright>=1.40.0"]
artifacts = ["aioboto3>=13.0"]
pdf = ["pypdf>=5.0"]
docx = ["python-docx>=1.1"]

# Install all optional: pip install "agent-verse-backend[voyage,gemini,browser]"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis]>=4.9.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx2>=2.4.0",
    "agentverse-sdk[dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing -p no:unraisableexception"
markers = [
    "integration: tests requiring real Redis/Postgres (testcontainers)",
    "slow: tests that hit real LLM providers (opt-in)",
]
filterwarnings = [
    "error",
    # Third-party deprecation inside testcontainers wait helpers (out of our control).
    "ignore::DeprecationWarning:testcontainers.*",
    # asyncpg GC cleanup — unclosed connections are harmless in tests (pool teardown timing).
    "ignore::ResourceWarning:asyncpg.*",
    "ignore::ResourceWarning",
    # asyncpg cancel-coroutine GC noise (Connection._cancel never awaited on teardown).
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    # Background asyncio tasks from app startup fire-and-forget patterns (LangGraph checkpoint
    # setup, Redis pub/sub, audit flusher). These are intentional fire-and-forget; the tasks
    # raise when the event loop closes after the test. They are not test failures.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
omit = [
    # Alembic auto-generated DDL migrations — SQL schema definitions only.
    "app/db/migrations/*",
    # MCP connector server HTTP wrappers — 300+ thin files each wrapping a
    # different external API. The common dispatch pattern is covered by
    # parametrized tests in tests/mcp/test_servers_comprehensive.py.
    # Individual HTTP bodies need live API keys; belong in integration tests.
    "app/mcp/servers/*",
]

[tool.coverage.run]
omit = [
    "app/db/migrations/*",
    "app/mcp/servers/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["A003", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pgvector.*", "openai.*"]
ignore_missing_imports = true

[tool.uv.sources]
agentverse-sdk = { path = "../agent-verse-sdk-python" }
